header card hover white color

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
           </div>
           <div class="header-nav-icons">
             <a href="">
-              <img src="image/Shop.svg" alt="" />
+              <img src="image/Shop.svg" alt="icon" />
             </a>
             <a href="">
-              <img src="image/Search.svg" alt="" />
+              <img src="image/Search.svg" alt="icon"/>
             </a>
             <a href="">
-              <img src="image/Profile 2.svg" alt="" />
+              <img src="image/Profile 2.svg" alt="icon"/>
             </a>
           </div>
         </div>
